[iOS] REGRESSION (r218144) -[WKContentView targetForAction:withSender:] returns the content view for actions implemented only by the WKWebView, causing a crash https://bugs.webkit.org/show_bug.cgi?id=176077 <rdar://problem/34145200>

Reviewed by Sam Weinig.

Source/WebKit:

Test: TestWebKitAPI/Tests/WebKitCocoa/WKContentViewTargetForAction.mm

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView targetForAction:withSender:]): Override and forward WKContentView actions to
  -[WKContentView targetForActionForWebView:withSender:].
* UIProcess/ios/WKContentViewInteraction.h: Declare -targetForActionForWebView:withSender:.
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView targetForAction:withSender:]): Forward to the WKWebView.
(-[WKContentView targetForActionForWebView:withSender:]): Call super’s
  -targetForAction:withSender:.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WKContentViewTargetForAction.mm: Added.
(-[TestWKContentViewTargetForActionView testAction:]):
(TEST):
* TestWebKitAPI/ios/UIKitSPI.h:


Canonical link: https://commits.webkit.org/192818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221415 268f45cc-cd09-0410-ab3c-d52691b4dbfc